--- a/requirements.txt
+++ b/requirements.txt
@@ -23,9 +23,11 @@ pylint==2.2.0
 pymongo==3.7.2
 python-dotenv==0.9.1
 pytz==2018.7
+redis==2.10.6
 requests==2.20.1
 singledispatch==3.4.0.3
 six==1.11.0
+typed-ast==1.1.0
 urllib3==1.24.1
 vine==1.1.4
 Werkzeug==0.14.1
